tests/baselines/reference/newArrays.errors.txt
newArrays.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== newArrays.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	class Foo {}
    	class Gar {
    		public fa: Foo[];
    		public x = 10;
    		public y = 10;
    
    		public m () {
    			this.fa = new Array<Foo>(this.x * this.y);		
    		}
    	}
    }